--- a/source/_posts/2014-06-22-thanks-to-360-cdn.markdown
+++ b/source/_posts/2014-06-22-thanks-to-360-cdn.markdown
@@ -16,7 +16,7 @@ OK，不发牢骚了，因为Google被墙的厉害，而且博客中不少使用
 
 文件： `source/_includes`目录下的`head.html`，修改如下：
 
-```
+```html
 <!--
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 -->
@@ -25,7 +25,7 @@ OK，不发牢骚了，因为Google被墙的厉害，而且博客中不少使用
 
 文件： `source/_includes`目录下的`header.html`，修改如下：
 
-```
+```html
 <!-- 注释掉下面的js -->
 <!--
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -41,7 +41,7 @@ OK，不发牢骚了，因为Google被墙的厉害，而且博客中不少使用
 
 文件： `source/_includes/custom`目录下的`head.html`，修改如下：
 
-```
+```html
 <!-- 注释掉下面的css -->
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 <!--
